# password-validator-test

password-validator/: README.md  pyproject.toml  pyvenv.cfg  stup.cfg
password-validator/Scripts/: activate  activate.bat
password-validator/src/password_validator/: __init__.py  senhas.txt  validator.py
password-validator/tests/: test-validator.py
